--- a/analysis/synopsis_OIA.Rmd
+++ b/analysis/synopsis_OIA.Rmd
@@ -7578,7 +7578,6 @@ co2_atm_level <- acidification_volume %>%
   pull() %>%
   round()
 
-
 acidification_volume <-
   acidification_volume %>%
   rename(estimate = variable) %>%
@@ -7586,18 +7585,18 @@ acidification_volume <-
     sat_level = as.factor(sat_level),
     estimate = case_when(
       estimate == "volume_relative_to_total_volume" ~
-        "Saturated volume\n(% of top 3000m)",
+        "Saturated volume\nrelative to total volume (%)",
       estimate == "volume_loss_cumulative_relative_to_total_volume" ~
-        "Loss of sat. volume\n(% of top 3000m)",
+        "Loss of\nsatured volume\nrelative to total volume (%)",
       estimate == "volume_loss_cumulative_relative_to_preind_volume" ~
-        "Loss of sat. volume\n(% preind. vol.)"
+        "Loss of saturated volume\n\nrelative preindustrial volume (%)"
     ),
     estimate = factor(
       estimate,
       levels = c(
-        "Saturated volume\n(% of top 3000m)",
-        "Loss of sat. volume\n(% of top 3000m)",
-        "Loss of sat. volume\n(% preind. vol.)"
+        "Saturated volume\nrelative to total volume (%)",
+        "Loss of\nsatured volume\nrelative to total volume (%)",
+        "Loss of saturated volume\n\nrelative preindustrial volume (%)"
       )
     )
   )
@@ -7628,7 +7627,7 @@ acidification_volume %>%
   geom_text(
     data = . %>%
       filter(
-        estimate == "Loss of sat. volume\n(% preind. vol.)",
+        estimate == "Loss of saturated volume\n\nrelative preindustrial volume (%)",
         sat_level == 4,
         tref != 1800
       ),
@@ -7639,7 +7638,7 @@ acidification_volume %>%
   geom_text(
     data = . %>%
       filter(
-        estimate == "Loss of sat. volume\n(% preind. vol.)",
+        estimate == "Loss of saturated volume\n\nrelative preindustrial volume (%)",
         sat_level == 4,
         tref == 1800
       ),
@@ -7680,7 +7679,7 @@ ggsave(
 
 acidification_volume %>%
   filter(sat_level %in% c(1,3,4),
-         estimate == "Loss of sat. volume\n(% preind. vol.)" ) %>% 
+         estimate == "Loss of saturated volume\n\nrelative preindustrial volume (%)" ) %>% 
   ggplot(aes(
     x = pCO2,
     y = std_case,
@@ -7704,7 +7703,7 @@ acidification_volume %>%
   geom_text(
     data = . %>%
       filter(
-        estimate == "Loss of sat. volume\n(% preind. vol.)",
+        estimate == "Loss of saturated volume\n\nrelative preindustrial volume (%)",
         sat_level == 4,
         tref != 1800
       ),
@@ -7715,7 +7714,7 @@ acidification_volume %>%
   geom_text(
     data = . %>%
       filter(
-        estimate == "Loss of sat. volume\n(% preind. vol.)",
+        estimate == "Loss of saturated volume\n\nrelative preindustrial volume (%)",
         sat_level == 4,
         tref == 1800
       ),
@@ -7742,7 +7741,7 @@ acidification_volume %>%
 
 ggsave(
   here::here("output/main/volume_omega_saturation_global_presentation.png"),
-  width = 4,
+  width = 4.2,
   height = 3,
   dpi = 600,
   bg = "white"
